--- a/DockerFile
+++ b/DockerFile
@@ -3,8 +3,8 @@ FROM python:3.7-slim-buster
 WORKDIR /nfl-site-docker
 
 COPY requirements.txt requirements.txt
-RUN pip3 install -r requirements.txt
+RUN pip install -r requirements.txt
 
 COPY . .
 
-CMD [ "python3", "./run.py"]
+CMD [ "python", "run.py"]
